# flat-checker

./: LICENSE  README.md  TODO  checker.cabal  flat-checker.cabal  fltl-checker.cabal  stack.yaml
app/: Bench.hs  CheckRersRun.hs  Main.hs  TransformRersFormulas.hs
examples/: TODO  bench.dot  test.dot  test.graph  test2.dot  test2.graph  test2b.graph  test3.dot  test3.graph  test4.dot  test4.graph  test5.dot  test5.graph  test6.dot  test7.dot  test8.dot  testLoopGuards.dot  testNonTemp.dot  testReset.dot  testResetLast.dot  testSplit.dot  testSwap.dot  testTemp.dot
src/: Bench.hs  Cycles.hs  Graph.hs  Lib.hs  Parse.hs  Solve.hs  Types.hs  Util.hs  Z3Util.hs
