name:                flat-checker
version:             0.1.0.0
synopsis:            An experimental model checker for LTL with counting
description:         Please see README.md
homepage:            https://github.com/apirogov/flat-checker
license:             BSD3
license-file:        LICENSE
author:              Anton Pirogov
maintainer:          anton dot pirogov at gmail dot com
copyright:           2016 Anton Pirogov
category:            Logic
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Parse, Solve, Graph, Cycles, Util, Bench
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , text
                     , fgl
                     , mtl
                     , monad-loops
                     , lens
                     , parsec
                     , clock
                     , boxes
                     , graphviz
                     , z3
                     , deepseq
  ghc-options:         -Wall -Wno-missing-signatures
  default-language:    Haskell2010

executable check-rers-run
  hs-source-dirs:      app
  main-is:             CheckRersRun.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , flat-checker
                     , directory
                     , containers
                     , temporary
                     , process
  default-language:    Haskell2010

executable rersify
  hs-source-dirs:      app
  main-is:             TransformRersFormulas.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , flat-checker
                     , containers
  default-language:    Haskell2010

executable flat-checker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , flat-checker
                     , directory
                     , optparse-applicative
                     , terminal-size
                     , time
                     , template-haskell
                     , gitrev
  default-language:    Haskell2010

test-suite flat-checker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , flat-checker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/apirogov/flat-checker
