name:                fltl-checker
version:             0.1.0.0
synopsis:            A bounded existential model checker for fLTL
description:         Please see README.md
homepage:            https://github.com/apirogov/fltl-checker
license:             BSD3
license-file:        LICENSE
author:              Anton Pirogov
maintainer:          anton dot pirogov at gmail dot com
copyright:           2016 Anton Pirogov
category:            Logic
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Parse, Solve, Graph
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , lens
                     , vector
                     , parsec
                     , vector
                     , containers
                     , text
                     , fgl
                     , clock
                     , boxes
                     , graphviz
                     , z3
  default-language:    Haskell2010

executable fltl-checker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fltl-checker
                     , directory
                     , optparse-applicative
  default-language:    Haskell2010

test-suite fltl-checker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fltl-checker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/apirogov/fltl-checker
